--- a/src/main/resources/templates/zhxw.html
+++ b/src/main/resources/templates/zhxw.html
@@ -8,13 +8,9 @@
 <body>
 <form class="login-page" action="/login" method="post">
     <div class="form">
-        <h3>账户登录</h3>
+        <h3>招行新闻</h3>
         <input type="text" placeholder="用户名" name="username" required="required" />
         <input type="password" placeholder="密码" name="password" required="required" />
-        <span style="display: inline">
-            <input type="text" name="imageCode" placeholder="验证码" style="width: 50%;"/>
-            <img src="/code/image"/>
-        </span>
         <button type="submit">登录</button>
     </div>
 </form>
