第六波更新 3/30 16：30

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,7 +8,7 @@
     <link rel="Shortcut Icon" href="http://www.cmbchina.com/cmb.ico"><link rel="Bookmark" href="http://www.cmbchina.com/cmb.ico"><link rel="apple-touch-icon" sizes="72x72" href="http://www.cmbchina.com/touch-icon-ipad.png"><link th:href="@{Styles/Common.css}" rel="stylesheet" type="text/css"><link th:href="@{Styles/header.css}" rel="stylesheet" type="text/css"><link th:href="@{Styles/footer.css}" rel="stylesheet" type="text/css"><meta name="baidu-site-verification" content="prEJCYtyPU">
     <meta name="mobile-agent" content="format=html5;url=http://m.cmbchina.com">
     <meta name="status-check" content="@CMBOK@"><meta name="keywords" content="招商银行, 招行,招商银行官方网站,招商银行官网, China Merchants Bank, CMB, 一网通, 网上银行, 电话银行, 手机银行, 手机网站, 手机一网通, 掌上银行, 一卡通, 信用卡, 金葵花卡, 财富账户, 储蓄, 贷款, 汇款, 客户服务, 证券, 基金, 外汇, 商城, 房城, 理财, 黄金, 社区, 企业银行, 资产托管, 企业年金, 招行新闻, 招行公告, 营业网点, 酒店预订, 机票预订, 利率, 人才招聘, China Merchants Bank, CMB, @CMBOK@"><meta name="description" content="招商银行官方网站。办理卡片申请,智能存款,转账汇款,网上支付,投资理财,贷款消费,信用卡还款,生活缴费,外汇买卖,实时利率,汇率查询,公司理财,企业贷款等业务,享受一站式综合金融服务！更可登录网上银行,手机银行,尽享24小时在线便利金融服务！@CMBOK@"><script></script><script th:src="@{scriipts/sdc_cmb.js}"></script></head>
-<body style="background: url(/images/bg.gif) center top no-repeat rgb(255, 255, 255);">
+<body style="background: url(/images/beijing3.gif) center top no-repeat rgb(255, 255, 255);">
 <form method="post" action="http://www.cmbchina.com/default.aspx" id="form1">
     <div class="aspNetHidden">
         <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUJODI2MzQxNzYyZGT1SH5FLsoSsSNjeBdPaAds3VHAxH7WIKz5UhJMUys72w==">
@@ -1997,7 +1997,7 @@
             }
         }
         if (window.screen.width > 1024) {
-            document.body.style.background = "#fff url(/images/bg.gif) no-repeat center top";
+            document.body.style.background = "#fff url(/images/beijing3.gif) no-repeat center top";
             document.getElementById("top_bar").style.width = "950px";
         }
         else {
